fixed nav font size, % based width, and item spacing.

--- a/css/index.css
+++ b/css/index.css
@@ -67,6 +67,8 @@ h1, h2, h3, h4, h5 {
     max-width: 880px;
     width: 100%;
     margin: auto;
+    padding-left: 2.2%;
+    padding-right: 2.2%;
 }
 
 /* Header Styles */
@@ -74,13 +76,24 @@ h1, h2, h3, h4, h5 {
 header {
     width: 100%;
     display: flex;
+    justify-content: center;
+}
+
+header nav {
+    width: 69.3%;
 }
 
 header nav ul {
     margin-top: 4.5%; 
-    width: 69.3%;
+    width: 100%;
     justify-content: space-between;
     display: flex;
+    font-size: 1.6rem;
+    
+}
+
+header nav ul li {
+ 
 }
 
 header nav ul li a {
@@ -142,6 +155,7 @@ header .logo {
    padding: 4% 0;
    font-size: 1.6rem;
    line-height: 18px;
+
 }
 
 .main-content .top-content {
@@ -150,6 +164,7 @@ header .logo {
 }
 
 .main-content .middle-img {
+    width: 100%;
     display: block;
     margin: 3.4% auto;
 }
@@ -164,7 +179,9 @@ header .logo {
 }
 
 /* Contact Styles */
-
+.contact{
+    font-size: 1.6rem;
+}
 .contact p {
     margin: 1.7% 0;
 }
@@ -172,8 +189,9 @@ header .logo {
 /* Footer Styles */
 
 footer {
+    font-size: 1.6rem;
     text-align: center;
-    margin: 4.5% 0 2.2%;
+    margin: 10% 0 2.2%;
 }
 
 
@@ -191,20 +209,35 @@ footer {
     .container {
         max-width: 750px;
         width: 100%;
+
     }
 
     header {
         flex-direction: column-reverse;
         align-items: center;
+        
     }
+
+   
 
     header .logo {
         align-self: center;
         margin: 3.1% 0 0 0;
     }
 
+    header nav {
+        width: 60%;
+    }
+    
+
+
     header nav ul {
-        width: 450px;
+        width: 100%;
+        
+    }
+
+    header nav ul li {
+
 
     }
 
@@ -214,7 +247,7 @@ footer {
 
     .cta .cta-text {
         font-size: 6.2rem;
-        margin: 0 0px 0 0;
+        margin: 0 0 0 0;
     }
 
     .cta img {
@@ -222,20 +255,20 @@ footer {
     }
 
     .main-content {
-        padding-left: 20px;
-        padding-right: 20px;
+        padding-left: 2.6%;
+        padding-right: 2.6%;
     }
 
     .top-content .text-content {
-        padding-right: 10px;
+        padding-right: 1.3%;
     }
 
-    .main-content img {
+    .main-content .middle-img {
         width: 100%;
     }
 
     .contact {
-        padding-left: 20px;
+        padding-left: 2.6%;
     }
 
 }
@@ -244,10 +277,12 @@ footer {
 /* Phone */
 @media (max-width:400px){
     .container {
-        width: 370px;
+        max-width: 370px;
+        width: 100%;
     }
 
     header {
+        width: 100%;
         flex-wrap: wrap-reverse;
     }
 
@@ -255,7 +290,7 @@ footer {
         width: 100%;
         flex-flow: column nowrap;
         align-items: center;
-        margin-left: 0px;
+        margin-left: 0;
         background-color: lightslategray;
 
      
